--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title>Hello World!</title>
 </head>
 <body>
-<h1>Hello World! I'm yout energy!</h1>
+<h1>Hello World! It is a great course.</h1>
 </body>
 </html>
