--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,8 @@
 	<title>Hello Wolrd</title>
 </head>
 <body>
-<h1>Hello World good morning everyone!</h1>
+<h1>Hello World good morning browser is connected</h1>
+<h2>Hello World</h2>
+<h3>Hello World</h3>
 </body>
 </html>
